--- a/web/index.html
+++ b/web/index.html
@@ -9,5 +9,6 @@
 	<h1>Hello World!</h1>
 	<hr>
 	<p>This is My First Web Page made using HTML</p>
+	<a href="https://www.google.com">Visit Google</a>
 </body>
 </html>
